# kakukuma

./: .gitignore  .loa-version.json  CLAUDE.md  Cargo.toml  LICENSE  README.md  horse-icon.kaku  horse-icon.kaku.autosave  horse.kaku  purple-bear.kaku  purple-bear.kaku.autosave  test.ans  testing this out.ans  testing this out.kaku  testing this out.kaku.autosave  untitled.kaku.autosave
.claude/: checksums.json
.claude/scripts/lib/: context-isolation-lib.sh
.run/: sprint-plan-state.json
grimoires/loa/: NOTES.md  ledger.json  prd.md  sdd.md  sprint.md
grimoires/loa/a2a/: index.md
grimoires/loa/a2a/gpt-review/: code-findings-11.json
grimoires/loa/a2a/sprint-1/: COMPLETED  auditor-sprint-feedback.md  engineer-feedback.md  reviewer.md
grimoires/loa/a2a/sprint-2/: COMPLETED  auditor-sprint-feedback.md  engineer-feedback.md  reviewer.md
grimoires/loa/a2a/sprint-3/: COMPLETED  auditor-sprint-feedback.md  engineer-feedback.md  reviewer.md
grimoires/loa/a2a/sprint-4/: reviewer.md
grimoires/loa/a2a/sprint-5/: COMPLETED  auditor-sprint-feedback.md  (+1 more)
src/: app.rs  canvas.rs  cell.rs  export.rs  history.rs  import.rs  input.rs  lib.rs  main.rs  oplog.rs  palette.rs  project.rs  symmetry.rs  theme.rs  tools.rs
src/cli/: batch.rs  chars.rs  diff.rs  draw.rs  history_cmd.rs  inspect.rs  mod.rs  palette_cmd.rs  preview.rs  stats.rs
src/ui/: editor.rs  mod.rs  palette.rs  statusbar.rs  toolbar.rs
tests/: cli_diff.rs  cli_draw.rs  cli_new.rs  cli_preview.rs  cli_roundtrip.rs  cli_stats.rs  cli_symmetry.rs  cli_undo_redo.rs  helpers.rs  lib_api.rs
(+5 files in other folders)
