[package]
name = "kakukuma"
version = "0.1.0"
edition = "2021"
description = "Terminal-native ANSI art editor using Unicode block elements"
license = "MIT"
repository = "https://github.com/gumibera/kakukuma"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3"
dirs = "6"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp"] }
